# contract-v2

./: .gitignore  LICENSE  README.md  brittany.yaml  cabal.project  default.nix  flake.nix  jpg-store-bulk-purchase.cabal  release.nix  shell.nix  supported-systems.nix
.github/workflows/: nix.yml  release.yml
app/: Main.hs
apps/create-smart-contract/: Main.hs
assets/: nft-policy-id.txt  nft.plutus  swap.plutus
assets/mainnet/: swap.addr
assets/testnet/: swap.addr
integration-tests/: AlwaysSucceed.hs  Main.hs
nix/: pre-commit-hooks.nix
nix/haskell/: default.nix  plan-sha256  project.nix  sha256map.nix  tools.nix
nix/haskell/materialized/: default.nix
nix/haskell/materialized/.plan.nix/: byron-spec-chain.nix  byron-spec-ledger.nix  cardano-addresses-cli.nix  cardano-addresses.nix  cardano-api.nix  cardano-data.nix  cardano-ledger-alonzo.nix  cardano-ledger-core.nix  cardano-ledger-pretty.nix  cardano-ledger-shelley-ma.nix  cardano-ledger-shelley-test.nix  cardano-ledger-shelley.nix  cardano-numeric.nix  cardano-protocol-tpraos.nix  cardano-transaction.nix  cardano-wallet-cli.nix  cardano-wallet-core-integration.nix  cardano-wallet-core.nix  cardano-wallet-launcher.nix  cardano-wallet-test-utils.nix  cardano-wallet.nix  compact-map.nix  dbvar.nix  ekg-forward.nix  freer-extras.nix  io-classes.nix  io-sim.nix  jpg-store-bulk-purchase.nix  network-mux.nix  ntp-client.nix  ouroboros-consensus-cardano.nix  ouroboros-consensus-protocol.nix  ouroboros-consensus-shelley.nix  ouroboros-consensus.nix  ouroboros-network-framework.nix  ouroboros-network-testing.nix  ouroboros-network.nix  plutus-core.nix  plutus-ledger-api.nix  plutus-ledger.nix  (+10 more)
scripts/: compile.sh  query-protocol-parameters.sh  setup-wallets.sh
scripts/envars/: local-testnet.envs  mainnet.envs  testnet.envs
scripts/query/: find-utxo.sh  seller.sh
src/Canonical/: DebugUtilities.h  Shared.hs
src/Canonical/JpgStore/: BulkPurchase.hs  NftMinter.hs
unit-tests/: Main.hs
